--- a/style.css
+++ b/style.css
@@ -1,17 +1,49 @@
-.game{
-    background-color: lightgreen;
-    max-width: 1000px;
-    width: 100%;
-    height: 100%;
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+  }
+
+  .game {
     display: grid;
-    grid-template: 150px / auto auto auto;
-    
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 10px;
+  }
+
+  .button {
+    align-items: center;
+    background-color: green;
+    border-radius: 5px;
+    color: white;
+    display: flex;
+    font-size: 24px;
+    justify-content: center;
+    width: 200px;
+    height: 200px;
+  }
+
+  #button2 {
+    background-color: rgb(221, 40, 40);
+  }
+
+  #button3 {
+    background-color: rgb(223, 223, 45);
+  }
+
+  #button4 {
+    background-color: blue;
 }
 
-.button{
-    background-color: gray;
-    margin: 3px;
-    width: 20%;
-    height: 20%;
-    display: inline-grid;
-}
+  button {
+    background-color: green;
+    color: white;
+    margin: 20px;
+    font-size: 24px;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer; }
